fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -402,10 +402,11 @@ h3 {
   border-radius: 4px;
 }
 
-.meters .meter-card:nth-of-type(-n+2) > img {
-  transform: scale(1.06);
+.meter-card .ammeter-img {
+  transform: scale(1.2);
   transform-origin: center;
 }
+
 
 .meter-card::before,
 .meter-card::after {
